# case_scenario

./: .gitignore  README.md  case_scanario.py  extract_tabular_answers.py  index.html  main.py  progress_context.txt  pyproject.toml  requirements.txt  slice_questions.py
scratch/: analyze_all_answers.py  check_existing_qb.py  check_extracted_details.py  check_raw_parser.py  debug_lines.py  debug_output.txt  debug_output_v3.txt  debug_parse_detail.py  debug_parse_questions.py  debug_q4.py  dump_xlsx_full.py  find_case_starts.py  inspect_existing.py  inspect_final_pdf.py  inspect_page_content.py  inspect_pdfs.py  inspect_sm.py  inspect_xlsx.py  json_to_js.py  move_files.py  parse_questions_pdf.py  parser_debug.txt  print_columns.py  read_sm_p12_13.py  retry_move.py  test_extractor.py  test_extractor_v3.py  test_q_save.py  test_slicing.py  trace_parsing.py
scripts/: build_exam_db.py  extract_tabular_answers.py  process_inter.py  slice_questions.py
web/: app.js  dashboard.html  dashboard.js  exam_database.js  exam_database.json  index.html  login.html  login.js  style.css  workspace.html  workspace.js
