[project]
name = "case-scanario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deprecated==1.3.1",
    "et-xmlfile==2.0.0",
    "lxml==6.1.0",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "packaging==26.1",
    "pandas==3.0.2",
    "pikepdf==10.5.1",
    "pillow==12.2.0",
    "pymupdf==1.27.2.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "tzdata==2026.1",
    "wrapt==2.1.2",
]
